another minor change to stop clipping of image under joe smith

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -247,7 +247,7 @@ body {
         .name-wrapper{
           margin-right: 20px;
           h1{
-            font-size: 5rem;
+            font-size: 7rem;
             }
           }
         }
@@ -383,7 +383,7 @@ body {
     }
     .img-wrapper{
       display: flex;
-      height: 128%;
+      height: 125%;
       margin-left: 0;
       grid-column: 1;
       grid-row: 1;
